[gd_scene load_steps=5 format=2]

[ext_resource path="res://Recursos/Musicas/kayakum.mp3" type="AudioStream" id=1]
[ext_resource path="res://Scripts/Scripts das Interfaces/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Recursos/Planos de Fundo/intro.jpg" type="Texture" id=3]
[ext_resource path="res://intro.ogv" type="VideoStream" id=4]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Margin"]
margin_left = 780.0
margin_top = 360.0
margin_right = 1280.0
margin_bottom = 360.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 8
size_flags_vertical = 4
custom_constants/separation = 35

[node name="musicamenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
autoplay = true
__meta__ = {
"_editor_description_": "musica tocada no menu e no video de introdução."
}

[node name="Start" type="TextureButton" parent="."]
margin_left = 312.0
margin_top = 237.0
margin_right = 662.0
margin_bottom = 337.0
rect_min_size = Vector2( 350, 75 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sobre" type="TextureButton" parent="."]
margin_left = 284.0
margin_top = 334.0
margin_right = 696.0
margin_bottom = 415.0
rect_min_size = Vector2( 350, 75 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sair" type="TextureButton" parent="."]
margin_left = 290.0
margin_top = 403.0
margin_right = 692.0
margin_bottom = 490.0
rect_min_size = Vector2( 350, 75 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoPlayer" type="VideoPlayer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
stream = ExtResource( 4 )
autoplay = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Sair" to="." method="_on_Button3_pressed"]
[connection signal="finished" from="VideoPlayer" to="." method="_on_VideoPlayer_finished"]
